_old/tiny/cmin/1/syntax.txt
source: declaration*

declaration: variable_decl
           | function_decl
           | enum_decl

type: int | byte | real

variable_decl: [type] (ID [<= expression])+ ";"

enum_decl: enum "{" (ID [<= NUMBER])+ "}"

function_decl: "def" ID "(" (type ID ",")* ")" ":" type block

block: statement
     | "{" statement * "}"

statement: variable_decl
         | if_stmt
         | while_stmt
         | return_stmt
         | asm_stmt

if_stmt: "if" expression block [else block]

while_stmt: "while" expression block

return_stmt: "return" expression ";"

asm_stmt: asm "{" code "}"

/********* expressions ************/

primary_exp: ID | CONSTANT | "(" expression ")"

prefix_exp: primary_exp
          | "-" primary_exp
          | "!" primary_exp

postfix_exp: prefix_exp
           | postfix_exp "(" expression ")"

cast_exp: postfix_exp
         | "<" type ">" postfix_exp

mul_exp: cast_exp
       | mul_exp "*" cast_exp
       | mul_exp "/" cast_exp
       | mul_exp "%" cast_exp

add_exp: mul_exp
       | add_exp "+" mul_exp
       | add_exp "-" mul_exp

shift_exp: add_exp
         | shift_exp "<<" add_exp
         | shift_exp ">>" add_exp

relational_exp: shift_exp
              | relational_exp "<" shift_exp
              | relational_exp ">" shift_exp
              | relational_exp "<=" shift_exp
              | relational_exp ">=" shift_exp

eq_exp: relational_exp
      | eq_exp "==" relational_exp
      | eq_exp "!=" relational_exp

logical_exp: eq_exp
           | logical_exp "&" eq_exp
           | logical_exp "|" eq_exp
           | logical_exp "^" eq_exp

short_circuit_exp: logical_exp
                 | short_circuit_exp "&&" logical_exp
                 | short_circuit_exp "||" logical_exp

expression: short_circuit_exp [? cast_exp : cast_exp]

